--- a/src/java/org/mypackage/controllers/web/index.html
+++ b/src/java/org/mypackage/controllers/web/index.html
@@ -66,6 +66,7 @@
             <br>
             <br>
             <center><h1 class="demo-heading-note">Green Light</h1></center>
+            <center><p class="lead">The Classroom of the Future</p></center>
         </div>
         <br>
         <div class="container">
@@ -84,44 +85,44 @@
                 </form>
                 <br>
                 <a href="register.html" class="btn btn-block btn-lg btn-info">Register</a>  
-            </div>
+                </br>
+                </br>
+                
 
-            <div class="col-lg-10">
+            </div>
+        </div>
+        <div style="width: 100%; background-color: #34495E; height: 400px;">
+            </br>
+            </br>
+            <div class="col-lg-12" >
                 <div class="row">
-                    <div class="col-xs-12 col-sm-4 col-md-3 col-lg-3">
+                    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
                         <div class="tile">
-                            <img src="../../img/icons/svg/compas.svg" alt="Compas" class="tile-image big-illustration">
+                            <img src="https://dl.dropboxusercontent.com/u/11260538/l/pencils%20%281%29.svg" alt="Compas" class="tile-image big-illustration">
                             <h3 class="tile-title">Education made simple</h3>
                             <p>100% convertable to HTML/CSS layout.</p>
                         </div>
                     </div>  
-                    <div class="col-xs-12 col-sm-4 col-md-3 col-lg-3">
+                    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
                         <div class="tile">
-                            <img src="../../img/icons/svg/compas.svg" alt="Compas" class="tile-image big-illustration">
+                            <img src="https://dl.dropboxusercontent.com/u/11260538/l/clocks.svg" alt="Compas" class="tile-image big-illustration">
                             <h3 class="tile-title">Education made simple</h3>
                             <p>100% convertable to HTML/CSS layout.</p>
                         </div>
                     </div>     
-                    <div class="col-xs-12 col-sm-4 col-md-3 col-lg-3">
+                    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
                         <div class="tile">
-                            <img src="../../img/icons/svg/compas.svg" alt="Compas" class="tile-image big-illustration">
+                            <img src="https://dl.dropboxusercontent.com/u/11260538/l/loop.svg" alt="Compas" class="tile-image big-illustration">
                             <h3 class="tile-title">Education made simple</h3>
                             <p>100% convertable to HTML/CSS layout.</p>
                         </div>
-                    </div>     
-                    <div class="col-xs-12 col-sm-4 col-md-3 col-lg-3">
-                        <div class="tile">
-                            <img src="../../img/icons/svg/compas.svg" alt="Compas" class="tile-image big-illustration">
-                            <h3 class="tile-title">Education made simple</h3>
-                            <p>100% convertable to HTML/CSS layout.</p>
-                        </div>
-                    </div>     
+                    </div>         
 
                 </div>
+            </div>
 
-            </div>    
+        </div>    
 
-        </div>
 
     </body>  
 </html>  
