--- a/src/java/org/mypackage/controllers/web/index.html
+++ b/src/java/org/mypackage/controllers/web/index.html
@@ -121,7 +121,11 @@
                 </div>
             </div>
 
-        </div>    
+        </div>
+        <div style="width: 100%; background-color: #2C3E50; height: 50px;">
+            
+            <span  style="color: white;"><p><small><i>Created by Sam Abdallah and Lucas Sacherer</i></small></p></span> 
+        </div>
 
 
     </body>  
