--- a/src/java/org/mypackage/controllers/web/index.html
+++ b/src/java/org/mypackage/controllers/web/index.html
@@ -96,7 +96,7 @@
                         <label for="exampleInputPassword1">Password</label>
                         <input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
                     </div>
-
+                    <br>
                     <input type="submit" class="btn btn-block btn-lg btn-primary" value="Login" name="Submit Button"/>  
                 </form>
                 <br>
@@ -116,7 +116,7 @@
                         <div class="tile">
                             <img src="https://dl.dropboxusercontent.com/u/11260538/l/pencils%20%281%29.svg" alt="Compas" class="tile-image big-illustration">
                             <h3 class="tile-title">Education made simple</h3>
-                            <p>100% convertable to HTML/CSS layout.</p>
+                            <p>Filler text. Filler text. Filler text.</p>
                         </div>
                     </div>  
                     <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
