Connected newclasspage to front

--- a/src/java/org/mypackage/controllers/web/NewClassPage.html
+++ b/src/java/org/mypackage/controllers/web/NewClassPage.html
@@ -87,7 +87,7 @@
         <br>
         <div class="container">
             <div class="col-md-12">
-                <form name="CreateClass" action="CreateClassServlet">  
+                <form name="CreateClass" action="CreateClassServlet" method="post">  
 
                     <div class="form-group">
                         <label for="name">Class name</label>
