--- a/src/java/org/mypackage/controllers/web/failIndex.html
+++ b/src/java/org/mypackage/controllers/web/failIndex.html
@@ -43,7 +43,7 @@
        and send them to the servlet  
        -->  
        <div align="center">
-       <form name="Student Form" action="StudentServlet">  
+       <form name="Student Form" action="StudentServlet" method="post">  
      
          <!--  
          Provide a label for the user to read and input fields,  
