Tied up loose ends

--- a/src/java/org/mypackage/controllers/web/index.html
+++ b/src/java/org/mypackage/controllers/web/index.html
@@ -81,7 +81,7 @@
         <div  class="animate">
             <br>
             <br>
-            <center><h1 class="demo-heading-note">Green Light</h1></center>
+            <center><h1>Green Light</h1></center>
             <center><p class="lead">The Classroom of the Future</p></center>
         </div>
         <br>
