--- a/src/java/org/mypackage/controllers/web/failNewClassPage.html
+++ b/src/java/org/mypackage/controllers/web/failNewClassPage.html
@@ -43,12 +43,12 @@
             }
             .animate {
                 position: relative; 
-                top: -30px;
+                top: -75px;
                 width: 100%;
                 margin-top: 0px;
                 border-top: 0px;
                 padding-top: 0px;
-                height: 300px;
+                height: 150px;
                 -webkit-animation: animate_bg 20s;
                 animation: animate_bg 20s;
                 -webkit-animation-iteration-count: infinite;
@@ -81,8 +81,7 @@
         <div  class="animate">
             <br>
             <br>
-            <center><h1 class="demo-heading-note">Green Light</h1></center>
-            <center><p class="lead">The Classroom of the Future</p></center>
+            <center><h3>>Green Light</h3></center>
         </div>
         <br>
         <div class="container">
@@ -102,7 +101,7 @@
                         <input type="password" name="password2" class="form-control" id="exampleInputPassword2" placeholder="Confirm password">
                     </div>
                     <br>
-                     <p>ERROR: <jsp:getProperty name="error" property="string" /></p>
+                    <p>ERROR: <jsp:getProperty name="error" property="string" /></p>
 
                     <input type="submit" class="btn btn-block btn-lg btn-primary" value="Register" name="Register Button"/>  
                 </form>
