Massive frontend overhaul

--- a/src/java/org/mypackage/controllers/web/joinclass.html
+++ b/src/java/org/mypackage/controllers/web/joinclass.html
@@ -81,7 +81,7 @@
         <div  class="animate">
             <br>
             <br>
-            <center><h3">Green Light</h3></center>
+            <center><h3>Green Light</h3></center>
         </div>
         <br>
         <div class="container">
