Fixed mobile scaling

--- a/src/java/org/mypackage/controllers/web/NewClassPage.html
+++ b/src/java/org/mypackage/controllers/web/NewClassPage.html
@@ -3,7 +3,7 @@
 10.3.11.101
 -->
 <html>  
-    <meta name="viewport" content="width=1000, initial-scale=1.0, maximum-scale=1.0">
+
 
 
 
@@ -23,6 +23,10 @@
           <script src="dist/js/vendor/html5shiv.js"></script>
           <script src="dist/js/vendor/respond.min.js"></script>
         <![endif]-->
+        <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <style>
             html {
