--- a/src/java/org/mypackage/controllers/web/failIndex.html
+++ b/src/java/org/mypackage/controllers/web/failIndex.html
@@ -3,6 +3,10 @@
  <html>  
       
    <head>  
+       <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
        <style>
 .animate {
     -webkit-animation: animate_bg 20s;
@@ -31,8 +35,6 @@
 </style>
   
  <title>Welcome Page | ConfusOMeter | Welcome Page</title>  
-     <meta charset="UTF-8">  
-     <meta name="viewport" content="width=device-width">  
    </head>  
    <body class="animate">   
    <center> ConfusOMeter</center>
