--- a/src/java/org/mypackage/controllers/web/joinclass.html
+++ b/src/java/org/mypackage/controllers/web/joinclass.html
@@ -3,7 +3,6 @@
 10.3.11.101
 -->
 <html>  
-    <meta name="viewport" content="width=1000, initial-scale=1.0, maximum-scale=1.0">
 
 
 
@@ -23,7 +22,10 @@
           <script src="dist/js/vendor/html5shiv.js"></script>
           <script src="dist/js/vendor/respond.min.js"></script>
         <![endif]-->
-
+<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
         <style>
             html {
                 position: relative;
@@ -73,9 +75,7 @@
             }
         </style>
 
-        <title>Join Class | Green Light | Join Class</title>  
-        <meta charset="UTF-8">  
-        <meta name="viewport" content="width=device-width">  
+        <title>Join Class | Green Light | Join Class</title>   
     </head>  
     <body>   
         <div  class="animate">
