Fixed mobile scaling

--- a/src/java/org/mypackage/controllers/web/index.html
+++ b/src/java/org/mypackage/controllers/web/index.html
@@ -38,8 +38,8 @@
                 margin-bottom: 50px;
             }
             .footer {
-                position: absolute;
-                bottom: 0;
+                //position: absolute;
+                //bottom: 0;
                 width: 100%;
                 /* Set the fixed height of the footer here */
                 height: 50px;
@@ -142,9 +142,11 @@
 
         </div>
         <footer class="footer">
-            <div class="col-lg-12" style="background-color: #2C3E50;" >
-                <div class="row">
-                    <span  style="color: white;"><p><small><i>Created by Sam Abdallah and Lucas Sacherer</i></small></p></span> 
+            <div class="container">
+                <div class="row row-footer">  
+                    <div class="col-lg-12" style="background-color: #2C3E50;" >
+                        <span  style="color: white;"><p><small><i>Created by Sam Abdallah and Lucas Sacherer</i></small></p></span> 
+                    </div>
                 </div>
             </div>
         </footer>
