Fixed mobile scaling

--- a/src/java/org/mypackage/controllers/web/index.html
+++ b/src/java/org/mypackage/controllers/web/index.html
@@ -33,15 +33,8 @@
                 position: relative;
                 min-height: 100%;
             }
-            body {
-                /* Margin bottom by footer height */
-                margin-bottom: 50px;
-            }
             .footer {
-                //position: absolute;
-                //bottom: 0;
                 width: 100%;
-                /* Set the fixed height of the footer here */
                 height: 50px;
                 background-color: #2C3E50;
             }
@@ -144,8 +137,8 @@
         <footer class="footer">
             <div class="container">
                 <div class="row row-footer">  
-                    <div class="col-lg-12" style="background-color: #2C3E50;" >
-                        <span  style="color: white;"><p><small><i>Created by Sam Abdallah and Lucas Sacherer</i></small></p></span> 
+                    <div class="col-xs-12" style="background-color: #2C3E50;" >
+                        <span style="color: white;"><small><i>Created by Sam Abdallah and Lucas Sacherer</i></small></span> 
                     </div>
                 </div>
             </div>
