--- a/src/java/org/mypackage/controllers/web/NewClassPage.html
+++ b/src/java/org/mypackage/controllers/web/NewClassPage.html
@@ -97,7 +97,7 @@
                         <input type="text" name="classname" class="form-control" id="name" placeholder="(Example: AP Calculus BC Period 1)">
                     </div>
                     <div class="form-group">
-                        <label for="exampleInputPassword1">Password</label>
+                        <label for="exampleInputPassword1">Password (You will need to share this with students)</label>
                         <input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Password that students need to join the class.">
                     </div>
                     <div class="form-group">
