Fixed mobile scaling

--- a/src/java/org/mypackage/controllers/web/index.html
+++ b/src/java/org/mypackage/controllers/web/index.html
@@ -102,12 +102,9 @@
 
 
             </div>
-        </div>
-        <div style="width: 100%; background-color: #34495E; height: 400px;">
             </br>
             </br>
-            <div class="col-lg-12" style="background-color: #34495E;" >
-                <div class="row">
+                <div class="row" style="background-color: #34495E;">
                     <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
                         <div class="tile">
                             <img src="https://dl.dropboxusercontent.com/u/11260538/l/pencils%20%281%29.svg" alt="Compas" class="tile-image big-illustration">
@@ -129,20 +126,16 @@
                             <p>100% convertable to HTML/CSS layout.</p>
                         </div>
                     </div>         
-
-                </div>
             </div>
-
-        </div>
-        <footer class="footer">
-            <div class="container">
-                <div class="row row-footer">  
+                <div class="row">  
                     <div class="col-xs-12" style="background-color: #2C3E50;" >
                         <span style="color: white;"><small><i>Created by Sam Abdallah and Lucas Sacherer</i></small></span> 
                     </div>
                 </div>
-            </div>
-        </footer>
+        </div>
+
+
+
 
 
     </body>  
