Fixed mobile scaling

--- a/src/java/org/mypackage/controllers/web/index.html
+++ b/src/java/org/mypackage/controllers/web/index.html
@@ -81,7 +81,8 @@
         </div>
         <br>
         <div class="container">
-            <div class="col-md-12">
+            <div class="row">
+            <div class="col-xs-12">
                 <form name="Login" action="LoginServlet" method="post">  
                     <div class="form-group">
                         <label for="exampleInputEmail1">Email address</label>
@@ -102,9 +103,10 @@
 
 
             </div>
+            </div>
             </br>
             </br>
-                <div class="row" style="background-color: #34495E;">
+            <div class="row" style="background-color: #34495E;">
                     <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
                         <div class="tile">
                             <img src="https://dl.dropboxusercontent.com/u/11260538/l/pencils%20%281%29.svg" alt="Compas" class="tile-image big-illustration">
