Fixed mobile scaling

--- a/src/java/org/mypackage/controllers/web/index.html
+++ b/src/java/org/mypackage/controllers/web/index.html
@@ -107,21 +107,21 @@
             </br>
             </br>
             <div class="row" style="background-color: #34495E;">
-                    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+                    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4" style="height:400px;">
                         <div class="tile">
                             <img src="https://dl.dropboxusercontent.com/u/11260538/l/pencils%20%281%29.svg" alt="Compas" class="tile-image big-illustration">
                             <h3 class="tile-title">Education made simple</h3>
                             <p>Filler text. Filler text. Filler text.</p>
                         </div>
                     </div>  
-                    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+                    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4" style="height:400px;">
                         <div class="tile">
                             <img src="https://dl.dropboxusercontent.com/u/11260538/l/clocks.svg" alt="Compas" class="tile-image big-illustration">
                             <h3 class="tile-title">Education made simple</h3>
                             <p>100% convertable to HTML/CSS layout.</p>
                         </div>
                     </div>     
-                    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+                    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4" style="height:400px;">
                         <div class="tile">
                             <img src="https://dl.dropboxusercontent.com/u/11260538/l/loop.svg" alt="Compas" class="tile-image big-illustration">
                             <h3 class="tile-title">Education made simple</h3>
