--- a/src/java/org/mypackage/controllers/web/index.html
+++ b/src/java/org/mypackage/controllers/web/index.html
@@ -81,7 +81,7 @@
         </div>
         <br>
         <div class="container">
-            <div class="row">
+            <div class="row row-content">
             <div class="col-xs-12">
                 <form name="Login" action="LoginServlet" method="post">  
                     <div class="form-group">
@@ -104,9 +104,12 @@
 
             </div>
             </div>
-            </br>
-            </br>
-            <div class="row" style="background-color: #34495E;">
+            </div>
+
+            <div style="background-color: #34495E; width: 100%;">
+                        </br>
+                        </br>
+            <div class="row row-content" >
                     <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4" style="height:400px;">
                         <div class="tile">
                             <img src="https://dl.dropboxusercontent.com/u/11260538/l/pencils%20%281%29.svg" alt="Compas" class="tile-image big-illustration">
@@ -129,12 +132,13 @@
                         </div>
                     </div>         
             </div>
+            </div>
                 <div class="row">  
                     <div class="col-xs-12" style="background-color: #2C3E50;" >
                         <span style="color: white;"><small><i>Created by Sam Abdallah and Lucas Sacherer</i></small></span> 
                     </div>
                 </div>
-        </div>
+
 
 
 
