--- a/src/java/org/mypackage/controllers/web/index.html
+++ b/src/java/org/mypackage/controllers/web/index.html
@@ -33,11 +33,6 @@
                 position: relative;
                 min-height: 100%;
             }
-            .footer {
-                width: 100%;
-                height: 50px;
-                background-color: #2C3E50;
-            }
             .animate {
                 position: relative; 
                 top: -30px;
@@ -81,7 +76,7 @@
         </div>
         <br>
         <div class="container">
-            <div class="row row-content">
+            <div class="row row-content" style="margin-right:0px; margin-left:0px;">
             <div class="col-xs-12">
                 <form name="Login" action="LoginServlet" method="post">  
                     <div class="form-group">
@@ -109,7 +104,7 @@
             <div style="background-color: #34495E; width: 100%;">
                         </br>
                         </br>
-            <div class="row row-content" >
+            <div class="row row-content" style="margin-right:0px; margin-left:0px;" >
                     <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4" style="height:400px;">
                         <div class="tile">
                             <img src="https://dl.dropboxusercontent.com/u/11260538/l/pencils%20%281%29.svg" alt="Compas" class="tile-image big-illustration">
@@ -133,12 +128,13 @@
                     </div>         
             </div>
             </div>
-                <div class="row">  
+            <div style="width: 100%;">
+                <div class="row row-content" style="margin-right:0px; margin-left:0px;">  
                     <div class="col-xs-12" style="background-color: #2C3E50;" >
                         <span style="color: white;"><small><i>Created by Sam Abdallah and Lucas Sacherer</i></small></span> 
                     </div>
-                </div>
-
+            </div>
+            </div>
 
 
 
